# context-switcher

./: Cargo.toml  README.md
csw-cli/: Cargo.toml
csw-cli/src/: cli.rs  main.rs  output.rs  progress.rs
csw-cli/src/commands/: config_cmd.rs  done.rs  fetch.rs  list.rs  mod.rs  nav.rs  pull.rs  retitle.rs  start.rs  status.rs
csw-cli/tests/: config.rs  done.rs  fetch.rs  hooks.rs  nav.rs  pull.rs  retitle.rs  start.rs  status_list.rs
csw-cli/tests/common/: mod.rs
csw-core/: Cargo.toml
csw-core/src/: editor.rs  errors.rs  git.rs  hooks.rs  identity.rs  lib.rs  paths.rs  progress.rs  shell.rs  sidecar.rs
csw-core/src/cmux/: build.rs  client.rs  config.rs  mod.rs
csw-core/src/config/: mod.rs  repo.rs
csw-core/src/ops/: done.rs  fetch.rs  list.rs  mod.rs  pull.rs  retitle.rs  selection.rs  start.rs  status.rs
