[workspace]
resolver = "2"
members = ["csw-core", "csw-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/sleepyfran/context-switcher"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
shellexpand = "3"
shlex = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tempfile = "3"
