[package]
name = "csw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "csw"
path = "src/main.rs"

[dependencies]
csw-core = { path = "../csw-core" }
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false, features = ["fuzzy-select"] }
indicatif = "0.18"
serde_json.workspace = true
shlex.workspace = true
tempfile.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
