[package]
name = "csw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shellexpand.workspace = true
shlex.workspace = true
chrono.workspace = true
tempfile.workspace = true
